crates/aura-macros/tests/boundaries/semantic_owner_missing_terminal_path.stderr
error: semantic_owner requires sanctioned terminal path `publish_done` to appear in the function body
  --> tests/boundaries/semantic_owner_missing_terminal_path.rs:18:3
   |
18 |   ) {
   |  ___^
19 | |     let _ = 1usize;
20 | | }
   | |_^

warning: unused imports: `OperationContext` and `TraceContext`
 --> tests/boundaries/semantic_owner_missing_terminal_path.rs:1:17
  |
1 | use aura_core::{OperationContext, TraceContext};
  |                 ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
